--- a/teaching.qmd
+++ b/teaching.qmd
@@ -13,7 +13,7 @@ title: "Teaching"
 
 ::: columns
 ::: {.column width="10%"}
-<br> <i class="fa-solid fa-person-chalkboard" style="font-size: 5vw;"></i>
+<br> <i class="fa-solid fa-person-chalkboard" style="font-size: 6vmin;"></i>
 :::
 
 ::: {.column width="4%"}
@@ -44,7 +44,7 @@ My commitment to teaching was recognized with a honorary mention for the Outstan
 
 ::: columns
 ::: {.column width="10%"}
-<br> <i class="fa-solid fa-file-pen" style="font-size: 6vw;"></i>
+<br> <i class="fa-solid fa-file-pen" style="font-size: 6vmin;"></i>
 :::
 
 ::: {.column width="3%"}
