--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: 'Federica Zoe Ricci'
-subtitle:  '<p>  PhD Candidate, Statistics <br> University of California Irvine </p>'
+subtitle:  '<p>  Assistant Professor of Statistics <br> Swarthmore College </p>'
 image: "files/index/federica-zoe-ricci.png"
 
 about:
@@ -10,7 +10,7 @@ about:
   links:
     - icon: envelope
       text: E-mail
-      href: mailto:fzricci@uci.edu  
+      href: mailto:fricci1@swarthmore.edu  
     - text: "{{< ai google-scholar >}} Google Scholar"
       href: https://scholar.google.com/citations?user=z3cnaS4AAAAJ&hl=en
       target: _blank 
@@ -27,7 +27,7 @@ editor:
 Preserving the spirit of childhood for life means preserving the curiosity of learning, the pleasure to understand, the desire to communicate. (Bruno Munari)
 </p>
 
-Hi there! I am a PhD Candidate in Statistics, working with <a href="https://www.ics.uci.edu/~sudderth/" target="_blank"> Erik Sudderth </a> (UCI) and <a href ="https://www.micheleguindani.info/" target="_blank"> Michele Guindani </a> (UCLA). I combine Bayesian statistics and machine learning approaches to develop statistical models for structured data and scalable computational methods. I am a fellow of the <a href="https://hpi.ics.uci.edu/" target="_blank"> HPI Research Center in Machine Learning and Data Science at UCI </a>.
+Hi there! Starting from August 2025 I will be an Assistant Professor of Statistics (tenure-track) at the Department of Mathematics and Statistics at Swarthmore College. I received my PhD in Statistics from UC Irvine, working with <a href="https://www.ics.uci.edu/~sudderth/" target="_blank"> Erik Sudderth </a> (UCI) and <a href ="https://www.micheleguindani.info/" target="_blank"> Michele Guindani </a> (UCLA). I combine Bayesian statistics and machine learning approaches to develop statistical models for structured data and scalable computational methods. I was supported with a fellowship of the <a href="https://hpi.ics.uci.edu/" target="_blank"> HPI Research Center in Machine Learning and Data Science at UCI </a>.
 
 I am very passionate about statistics and data science education. I work on a variety of teaching and research projects in this area, including on formative feedback to data science assignments, gamification, scientific writing and Bayesian thinking in STEM.
 
