update index and docs

--- a/index.qmd
+++ b/index.qmd
@@ -27,7 +27,7 @@ editor:
 Preserving the spirit of childhood for life means preserving the curiosity of learning, the pleasure to understand, the desire to communicate. (Bruno Munari)
 </p>
 
-Hi there! Starting from August 2025 I will be an Assistant Professor of Statistics (tenure-track) at the Department of Mathematics and Statistics at Swarthmore College. I received my PhD in Statistics from UC Irvine, working with <a href="https://www.ics.uci.edu/~sudderth/" target="_blank"> Erik Sudderth </a> (UCI) and <a href ="https://www.micheleguindani.info/" target="_blank"> Michele Guindani </a> (UCLA). I combine Bayesian statistics and machine learning approaches to develop statistical models for structured data and scalable computational methods. I was supported with a fellowship of the <a href="https://hpi.ics.uci.edu/" target="_blank"> HPI Research Center in Machine Learning and Data Science at UCI </a>.
+Hi there! I am an Assistant Professor of Statistics (tenure-track) in the Department of Mathematics and Statistics at Swarthmore College. In 2025, I received my PhD in Statistics from UC Irvine, working with <a href="https://www.ics.uci.edu/~sudderth/" target="_blank"> Erik Sudderth </a> (UCI) and <a href ="https://www.micheleguindani.info/" target="_blank"> Michele Guindani </a> (UCLA). I combine Bayesian statistics and machine learning approaches to develop statistical models for structured data and scalable computational methods. I was supported with a fellowship of the <a href="https://hpi.ics.uci.edu/" target="_blank"> HPI Research Center in Machine Learning and Data Science at UCI. </a>
 
 I am very passionate about statistics and data science education. I work on a variety of teaching and research projects in this area, including on formative feedback to data science assignments, gamification, scientific writing and Bayesian thinking in STEM.
 
